# rotational

./: Cargo.toml  README.md  build.rs  icon.rc
.github/workflows/: rust.yml
src/: main.rs  togglescreen.rs  virtkeyboard.rs
