# #
#                                                                              #
#               ╔╗╔┌─┐┌┬┐┌─┐╔═╗┬  ┬┌─┐┬─┐┌─┐┬  ┌─┐┬ ┬                          #
#               ║║║│ │ │ └─┐║ ║└┐┌┘├┤ ├┬┘├┤ │  │ ││││                          #
#               ╝╚╝└─┘ ┴ └─┘╚═╝ └┘ └─┘┴└─└  ┴─┘└─┘└┴┘                          #
#                                                                              #
#               Cargo.toml created 2025/02/11                                  #
#               by Richard JUAN (contact@richard-juan.com)                     #
#                                                                              #
#               Copyright © 2025 Richard JUAN. All rights reserved             #
#                                                                              #
# #


[package]
name = "rotational"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-item = "0.10.0"
windows = { version = "0.59.0", features = ["Win32_Graphics_Gdi"] }
windows-hotkeys = "0.2.1"


[build-dependencies]
embed-resource = "3.0.1"
